force-app/main/default/objects/CommissionRecord2__c/CommissionRecord2__c.object-meta.xml
<CustomObject>
    <label>Commission Record</label>
    <nameField>
        <displayFormat>CommRec-{0000}</displayFormat>
        <label>Commission Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>