force-app/main/default/objects/CommissionRecord2__c/fields/Approved_On__c.field-meta.xml
<CustomField>
    <fullName>Approved_On__c</fullName>
    <description>The Date Accounting approved the Commission on</description>
    <label>Approved On</label>
    <type>DateTime</type>
</CustomField>