force-app/main/default/objects/CommissionRecord2__c/fields/Factory_Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Factory_Pricebook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Factory Pricebook Used to calculate cost on this record</description>
    <label>Factory Pricebook</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Commission Records (Factory Pricebook)</relationshipLabel>
    <relationshipName>Commission_Records1</relationshipName>
    <type>Lookup</type>
</CustomField>