force-app/main/default/objects/CommissionRecord2__c/fields/Journal_Entry__c.field-meta.xml
<CustomField>
    <fullName>Journal_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journal Entry</label>
    <referenceTo>AcctSeed__Journal_Entry__c</referenceTo>
    <relationshipLabel>Commission Records</relationshipLabel>
    <relationshipName>Commission_Records</relationshipName>
    <type>Lookup</type>
</CustomField>