force-app/main/default/objects/CommissionRecord2__c/fields/Previously_Approved_On__c.field-meta.xml
<CustomField>
    <fullName>Previously_Approved_On__c</fullName>
    <description>The date which the commission record was approved on before the Status was changed from Approved</description>
    <label>Previously Approved On</label>
    <type>DateTime</type>
</CustomField>