force-app/main/default/objects/CommissionRecord2__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>AcctSeed__Project__c</referenceTo>
    <relationshipLabel>Commission Records</relationshipLabel>
    <relationshipName>Commission_Records1</relationshipName>
    <type>Lookup</type>
</CustomField>