force-app/main/default/objects/CommissionRecord2__c/fields/TaxProvince__c.field-meta.xml
<CustomField>
    <fullName>TaxProvince__c</fullName>
    <formula>Project__r.GL_Account_Variable_3__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Province</label>
    <type>Text</type>
</CustomField>