force-app/main/default/objects/CommissionRecord2__c/fields/Total_Commission_Payment__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission_Payment__c</fullName>
    <description>This field is used to calculate managers commission. No need to put in a layout. It is only used in code.</description>
    <label>Total Commission Payment</label>
    <summarizedField>CommissionLineItem2__c.Actual_Amount_for_Commission__c</summarizedField>
    <summaryForeignKey>CommissionLineItem2__c.CommissionRecord2__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>