force-app/main/default/objects/CommissionRecord2__c/fields/Total_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment_Amount__c</fullName>
    <label>Total Payment Amount</label>
    <summarizedField>CommissionLineItem2__c.Payment_Amount__c</summarizedField>
    <summaryForeignKey>CommissionLineItem2__c.CommissionRecord2__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>